# bte

./: CMakeLists.txt  README.md
include/: child.h  color.h  fonts.h  render.h  util.h  window.h
include/glad/: glad.h
src/: bte.c  child.c  color.c  fonts.c  glad.c  render.c  util.c  window.c
